Bring back surefire argLine.