@@ -262,6 +262,7 @@
                </dependency>
             </dependencies>
             <product>org.eclipse.sdk.ide</product>
+ 	    <argLine>${tycho.testArgLine} -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine> 
 	  </configuration>
 	</plugin>
         <plugin>
